--- a/ReHouse.FrontEnd/Views/NewBuilding/Index.cshtml
+++ b/ReHouse.FrontEnd/Views/NewBuilding/Index.cshtml
@@ -7,7 +7,7 @@
         <pre> </pre>
         <p>/</p>
         <pre> </pre>
-        @Html.ActionLink("Новостройки", "index", "newbuilding")
+        @Html.ActionLink("ЖК Новострои", "index", "newbuilding")
     </div>
 </div>
 <div class="h2novostroy"><h2>Новостройки</h2></div>
