--- a/ReHouse.FrontEnd/Views/Shared/_Layout.cshtml
+++ b/ReHouse.FrontEnd/Views/Shared/_Layout.cshtml
@@ -152,7 +152,7 @@
                                     <li><a href="~/sale/flat">Купить квартиру</a></li>
                                     <li><a href="~/sale/house">Купить дом</a></li>
                                     <li><a href="~/sale/homestead">Купить участок</a></li>
-                                    <li><a href="~/sale/commerce">Купить коммерческую</a></li>
+                                    <li><a href="~/sale/commerce">Купить коммерцию</a></li>
                                 </ol>
                             </li>
                             <li>
@@ -166,7 +166,7 @@
                                     <li><a href="~/rent/homestead">Снять участок</a></li>
                                 </ol>
                             </li>                            
-                            <li><a href="~/newbuilding/">Новостройки</a></li>
+                            <li><a href="~/newbuilding/">ЖК Новострои</a></li>
                             <li><a href="~/manager/" id="">Менеджеры</a></li>
                             <li>
                                 <a href="#" id="">О нас</a>
@@ -250,7 +250,6 @@
                 <a href="#" class="">Контакты</a>
                 <a href="~/map/index" class="">Карта сайта</a>
                 <a href="~/feedback/index" class="">Отзывы</a>
-                <a href="#" class="">Правила</a>
             </div>
         </div>
     </div>
