--- a/ReHouse.FrontEnd/Areas/Cabinet/Views/Rent/Homestead.cshtml
+++ b/ReHouse.FrontEnd/Areas/Cabinet/Views/Rent/Homestead.cshtml
@@ -13,7 +13,7 @@
                 <li><a href="~/cabinet/sale/flat">Квартиры</a></li>
                 <li><a href="~/cabinet/sale/house">Дома</a></li>
                 <li><a href="~/cabinet/sale/homestead">Участки</a></li>
-                <li><a href="~/cabinet/sale/commerce">Коммерческие</a></li>
+                <li><a href="~/cabinet/sale/commerce">Коммерция</a></li>
             </ol>
         </li>
 
@@ -25,7 +25,7 @@
                 <li><a href="~/cabinet/rent/homestead">Участки</a></li>
             </ol>
         </li>
-        <li><a class="3" href="~/cabinet/newbuilding/list">Новостройки</a></li>
+        <li><a class="3" href="~/cabinet/newbuilding/list">ЖК Новострои</a></li>
         <li><a class="4" href="~/cabinet/news/list">Новости</a></li>
     </ul>
 </div>
