--- a/ReHouse.FrontEnd/Views/Sale/Detail.cshtml
+++ b/ReHouse.FrontEnd/Views/Sale/Detail.cshtml
@@ -46,7 +46,7 @@
                 action = "homestead";
                 break;
             case (int)ParrentCategories.Commerce:
-                desc = "Купить коммерческую";
+                desc = "Купить коммерцию";
                 action = "commerce";
                 break;
         }
@@ -65,7 +65,17 @@
         <a onclick="addtocart(@Model.Advert.Id, '@Model.Advert.Type', true, this);" id="favorite">Добавить в избранное</a>
     </div>
 </div>
-
+<div class="share_icons">
+    <div class="share_fb">
+        <a onclick="Share.facebook('http://rehouse-realty.com.ua/sale/detail/@(Model.Advert.Id)', 'Продам @Model.Advert.Title.RussianName, @Model.Advert.Street', 'http://rehouse-realty.com.ua@(Url.Content("~/Content/images/news1.jpg"))', '@Model.Advert.Description')"></a>
+    </div>
+    <div class="share_vk">
+        <a onclick="Share.vkontakte('http://rehouse-realty.com.ua/sale/detail/@(Model.Advert.Id)', 'Продам @Model.Advert.Title.RussianName, @Model.Advert.Street', 'http://rehouse-realty.com.ua@(Url.Content("~/Content/images/news1.jpg"))', '@Model.Advert.Description')"></a>
+    </div>
+    <div class="share_tw">
+        <a onclick="Share.twitter('http://rehouse-realty.com.ua/sale/detail/@(Model.Advert.Id)', 'Продам @Model.Advert.Title.RussianName, @Model.Advert.Street')"></a>
+    </div>
+</div>
 
 
 <div id="products_example">
