--- a/ReHouse.FrontEnd/Areas/Cabinet/Views/Shared/Advert/_filters.cshtml
+++ b/ReHouse.FrontEnd/Areas/Cabinet/Views/Shared/Advert/_filters.cshtml
@@ -56,8 +56,8 @@
     }
     <div class="checkbox_">
         <select id="isonlyuser">
-            <option value="false">Все</option>
-            <option value="true">Только мои</option>
+            <option value="false">Все объявления</option>
+            <option value="true">Мои объявления</option>
         </select>
     </div>
 
