--- a/ReHouse.FrontEnd/Views/News/Detail.cshtml
+++ b/ReHouse.FrontEnd/Views/News/Detail.cshtml
@@ -21,7 +21,7 @@
         </div>
         <div class="content1">
             <p>@Model.Description</p>
-            <div class="share_icons">
+            <div class="share_icons1">
                 <div class="share_fb">
                     <a onclick="Share.facebook('http://rehouse-realty.com.ua/news/detail/@(Model.Id)', '@Model.Title', 'http://rehouse-realty.com.ua@(Url.Content("~/Content/images/news1.jpg"))', '@Model.Description')"></a>
                 </div>
