--- a/ReHouse.FrontEnd/Areas/Cabinet/Views/Rent/Flat.cshtml
+++ b/ReHouse.FrontEnd/Areas/Cabinet/Views/Rent/Flat.cshtml
@@ -1,4 +1,5 @@
-﻿@using ReHouse.FrontEnd.Models
+﻿@using ReHouse.Utils.Helpers
+@using ReHouse.FrontEnd.Models
 @model LoadAdvertsModel
 @{
     Layout = "~/Areas/Cabinet/Views/Shared/_Layout.cshtml";
@@ -6,7 +7,7 @@
 <div class="list_">
     <h2 class="tabset_label">Table of Contents</h2>
     <ul class="tabset_tabs">
-        <li class="firstchild"><a href="~/cabinet/profile" >Профиль</a></li>
+        <li class="firstchild"><a href="~/cabinet/profile">Профиль</a></li>
         <li>
             <a class="1">Продажа</a>
             <ol>
@@ -32,7 +33,7 @@
 <div id="adminka2" class="tabset_content">
     <div class="headline">
         <h2>Добавленные объявления аренды квартир</h2>
-        <form method="LINK" action="/cabinet/rent/add">
+        <form method="LINK" action="/cabinet/rent/add/@((int)ParrentCategories.Flat)">
             <button>Добавить новое объявление ►</button>
         </form>
     </div>
@@ -50,7 +51,7 @@
             </table>
         </div>
         <div>
-            <div class="products">
+            <div class="products1">
                 <div id="button-more">
                     <a id="more">Больше объявлений</a>
                 </div>
@@ -62,6 +63,10 @@
     }
 
 </div>
-
-@Scripts.Render("~/bundles/advertSettingsRentAdmin")
-@Scripts.Render("~/bundles/deleteAdverts")
+@section scripts {
+    @Scripts.Render("~/bundles/advertSettingsRentAdmin")
+    @Scripts.Render("~/bundles/deleteAdverts")
+    <script>
+        var deleteUrl = "/cabinet/rent/delete";
+    </script>
+}
